# texhelper

./: .gitignore  pyproject.toml  texhelper.py
texhelper_frontend/: components.d.ts  package-lock.json  package.json
texhelper_frontend/src/: main.ts
texhelper_frontend/src/assets/: shorcut.json
texhelper_frontend/src/components/: EditorMenu.vue  Main.vue  ShortcutMenu.vue
